--- a/examples/configs/chunks.html
+++ b/examples/configs/chunks.html
@@ -11,8 +11,9 @@
       <button id="chunk2">Load chunk2</button>
     </div>
     <pre id="output"></pre>
+    <div id="sandbox"></div>
 
-    <script src="http://localhost:9810/compile?id=chunks"></script>
+    <script src="http://localhost:9810/compile?id=chunks&mode=SIMPLE"></script>
     <!-- <script src="../../node_modules/google-closure-library/closure/goog/base.js"></script> -->
     <!-- <script src="deps.js"></script>                                                        -->
     <!-- <script src="js/init.js"></script>                                                        -->
