refactor(examples): integrate configs to chunks, rename closure-scripts to mixed-modules

--- a/examples/chunks/chunks.html
+++ b/examples/chunks/chunks.html
@@ -11,11 +11,13 @@
       <button id="chunk2">Load chunk2</button>
     </div>
     <pre id="output"></pre>
+    <div id="sandbox"></div>
 
     <script src="http://localhost:9810/compile?id=chunks"></script>
+    <!-- <script src="http://localhost:9810/compile?id=chunks&mode=SIMPLE"></script> -->
     <!-- <script src="../../node_modules/google-closure-library/closure/goog/base.js"></script> -->
     <!-- <script src="deps.js"></script>                                                        -->
-    <!-- <script src="init.js"></script>                                                        -->
+    <!-- <script src="js/init.js"></script>                                                        -->
     <!-- <script>goog.require('chunks')</script>                                                   -->
   </body>
 </html>
