feat: `mode` param in examples/chunks

--- a/examples/chunks/page2.html
+++ b/examples/chunks/page2.html
@@ -8,9 +8,8 @@
     <h1>Page 2</h1>
     <pre id="output"></pre>
 
-    <script src="http://localhost:9810/compile?id=page2"></script>
-    <!-- <script src="http://localhost:9810/compile?id=page2&mode=SIMPLE"></script> -->
-    <!-- <script src="http://localhost:9810/compile?id=page2&mode=ADVANCED"></script> -->
+    <script src="./bootstrap.js"></script>
+    <!-- <script src="http://localhost:9810/compile?id=page2"></script> -->
     <!-- <script src="../../node_modules/google-closure-library/closure/goog/base.js"></script> -->
     <!-- <script src="js/deps.js"></script>                                                     -->
     <!-- <script> goog.require('app.page2'); </script>                                          -->
