--- a/examples/chunks/chunks.html
+++ b/examples/chunks/chunks.html
@@ -13,11 +13,11 @@
     <pre id="output"></pre>
     <div id="sandbox"></div>
 
-    <script src="http://localhost:9810/compile?id=chunks"></script>
-    <!-- <script src="http://localhost:9810/compile?id=chunks&mode=SIMPLE"></script> -->
+    <script src="./bootstrap.js"></script>
+    <!-- <script src="http://localhost:9810/compile?id=chunks"></script> -->
     <!-- <script src="../../node_modules/google-closure-library/closure/goog/base.js"></script> -->
     <!-- <script src="deps.js"></script>                                                        -->
-    <!-- <script src="js/init.js"></script>                                                        -->
-    <!-- <script>goog.require('chunks')</script>                                                   -->
+    <!-- <script src="js/init.js"></script>                                                     -->
+    <!-- <script>goog.require('chunks')</script>                                                -->
   </body>
 </html>
