--- a/examples/chunks/page1.html
+++ b/examples/chunks/page1.html
@@ -8,7 +8,8 @@
     <h1>Page 1</h1>
     <pre id="output"></pre>
 
-    <script src="http://localhost:9810/compile?id=page1"></script>
+    <script src="./bootstrap.js"></script>
+    <!-- <script src="http://localhost:9810/compile?id=page1"></script> -->
     <!-- <script src="../../node_modules/google-closure-library/closure/goog/base.js"></script> -->
     <!-- <script src="js/deps.js"></script>                                                     -->
     <!-- <script> goog.require('app.page1'); </script>                                          -->
