feat: build chunks

--- a/examples/chunks/chunks.html
+++ b/examples/chunks/chunks.html
@@ -14,6 +14,7 @@
     <div id="sandbox"></div>
 
     <script src="./bootstrap.js"></script>
+    <!-- <script src="./build/chunks/chunks.js"></script> -->
     <!-- <script src="http://localhost:9810/compile?id=chunks"></script> -->
     <!-- <script src="../../node_modules/google-closure-library/closure/goog/base.js"></script> -->
     <!-- <script src="deps.js"></script>                                                        -->
