docs(examples): revice examples

--- a/examples/build-and-serve/chunks.html
+++ b/examples/build-and-serve/chunks.html
@@ -6,6 +6,18 @@
   </head>
   <body>
     <h1>Chunks</h1>
+    <nav>
+      <ul>
+        <li><a href="?mode=RAW">RAW mode</a></li>
+        <li><a href="?mode=SIMPLE">SIMPLE mode</a></li>
+        <li><a href="?mode=ADVANCED">ADVANCED mode</a></li>
+        <li>
+          <a href="?mode=COMPILED"
+            >COMPILED mode (run `npm run build` in advance)</a
+          >
+        </li>
+      </ul>
+    </nav>
     <div>
       <button id="chunk1">Load chunk1</button>
       <button id="chunk2">Load chunk2</button>
