--- a/examples/build-and-serve/page2.html
+++ b/examples/build-and-serve/page2.html
@@ -6,6 +6,18 @@
   </head>
   <body>
     <h1>Page 2</h1>
+    <nav>
+      <ul>
+        <li><a href="?mode=RAW">RAW mode</a></li>
+        <li><a href="?mode=SIMPLE">SIMPLE mode</a></li>
+        <li><a href="?mode=ADVANCED">ADVANCED mode</a></li>
+        <li>
+          <a href="?mode=COMPILED"
+            >COMPILED mode (run `npm run build` in advance)</a
+          >
+        </li>
+      </ul>
+    </nav>
     <pre id="output"></pre>
 
     <script src="./bootstrap.js"></script>
